# The_Art_of_State_Machines

./: .gitignore  CMakeLists.txt  EventCentricStateMachine.c  StateCentricHiddenTransactionsStateMachine.c  StateCentricStateMachine.c  gitignore
StateMachines/: Commands.h  EventCentricStateMachine.c  StateCentricHiddenTransactionsStateMachine.c  StateCentricStateMachine.c  TrafficLightState.h
cfprintf/: cfprintf.c  cfprintf.h  test.c
color/: colors.c  colors.h
doc/: Documentation.tex
functions/: outputTrafficLightColor.c  outputTrafficLightColor.h
