cmake_minimum_required(VERSION 2.8.4)
project(States)
set(GLOBAL_LIBS cfprintf//cfprintf.c)
set(SOURCE_FILESStateCentric StateCentricStateMachine.c)
set(SOURCE_FILESStateCentricHidden StateCentricHiddenTransactionsStateMachine.c)
set(SOURCE_FILESEventCentric EventCentricStateMachine.c)
set(SOURCE_FILESStatePattern StatePatternStateMachine.c)
set(SOURCE_FILESTableDriven TableDrivenStateMachine.c)


add_executable(StateCentric ${GLOBAL_LIBS} ${SOURCE_FILESStateCentric})
add_executable(StateCentricHidden ${GLOBAL_LIBS} ${SOURCE_FILESStateCentricHidden})
add_executable(EventCentric ${GLOBAL_LIBS} ${SOURCE_FILESEventCentric})
add_executable(StatePattern ${GLOBAL_LIBS} ${SOURCE_FILESStatePattern})
add_executable(TableDriven ${GLOBAL_LIBS} ${SOURCE_FILESTableDriven})